# massCollapse

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  LICENSE.md  README.md
Debug/: dropGrowth  makefile
Debug/src/: Droplet.d  main.d  subdir.mk
src/: Droplet.cpp  Droplet.h  Global.h  GravitationRK.cl  Particle.cpp  Particle.h  main.cpp
